--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,13 +12,13 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:name="com.example.trackabuddy.TrackABuddyApp"
+        android:name="com.codepath.apps.trackabuddy.TrackABuddyApp"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.example.trackabuddy.MainActivity"
+            android:name="com.codepath.apps.trackabuddy.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
