--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,6 +20,14 @@
 <permission android:protectionLevel="signature"
     android:name="com.codepath.apps.trackabuddy.permission.C2D_MESSAGE" />
 <uses-permission android:name="com.parse.tutorials.pushnotifications.permission.C2D_MESSAGE" />
+    <permission android:name="com.example.mapdemo.permission.MAPS_RECEIVE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/> 
+    <uses-permission android:name="com.example.mapdemo.permission.MAPS_RECEIVE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <application
         android:name="com.codepath.apps.trackabuddy.TrackABuddyApp"
         android:allowBackup="true"
@@ -55,6 +63,13 @@
                 <category android:name="com.codepath.apps.trackabuddy" />
             </intent-filter>
         </receiver>
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyCSZuiHFWh6VSw44g2P-8Q6tkFZAOvVaQU" />
+            
+        <meta-data 
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version"/>
     </application>
 
 </manifest>
