--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,6 +25,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
+        android:uiOptions="splitActionBarWhenNarrow"
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.codepath.apps.trackabuddy.MainActivity"
