--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -40,6 +40,12 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name="com.codepath.apps.trackabuddy.ShowPopUp"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Holo.Light.Dialog" >
+        </activity>
+        
         <service android:name="com.parse.PushService" />
 
         <receiver android:name="com.parse.ParseBroadcastReceiver" >
@@ -63,7 +69,7 @@
             android:name="com.codepath.apps.trackabuddy.MyCustomReceiver"
             android:exported="false" >
             <intent-filter>
-                <action android:name="com.codepath.apps.trackabuddy.UPDATE_STATUS" />
+                <action android:name="SEND_TRACKING_REQ" />
             </intent-filter>
         </receiver>
     </application>
