Added contact screen does with out data

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -37,6 +37,11 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name="com.codepath.apps.trackabuddy.ContactActivity"
+            android:label="Contacts" >
+        </activity>
+
         <service android:name="com.parse.PushService" />
 
         <receiver android:name="com.parse.ParseBroadcastReceiver" >
