--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -44,6 +44,11 @@
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Holo.Light.Dialog" >
         </activity>
+        <activity
+            android:name="com.codepath.apps.trackabuddy.ShowPopUpResponse"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Holo.Light.Dialog" >
+        </activity>
 
         <service android:name="com.parse.PushService" />
 
