--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,8 +25,8 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:uiOptions="splitActionBarWhenNarrow"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/MyCustomTheme"
+        android:uiOptions="splitActionBarWhenNarrow" >
         <activity
             android:name="com.codepath.apps.trackabuddy.MainActivity"
             android:label="@string/app_name" >
