Sending Location info in Track Request Response

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -40,7 +40,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.codepath.apps.trackabuddy.ShowPopUp"
+            android:name="com.codepath.apps.trackabuddy.HandleTrackReqActivity"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Holo.Light.Dialog" >
         </activity>
