--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,9 +23,9 @@
 
     <uses-permission android:name="com.codepath.apps.trackabuddy.permission.C2D_MESSAGE" />
 
-    <permission android:name="com.example.mapdemo.permission.MAPS_RECEIVE" />
+    <permission android:name="com.codepath.apps.trackabuddy.permission.MAPS_RECEIVE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="com.example.mapdemo.permission.MAPS_RECEIVE" />
+    <uses-permission android:name="com.codepath.apps.trackabuddy.permission.MAPS_RECEIVE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
