--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -59,7 +59,7 @@
             android:uiOptions="splitActionBarWhenNarrow" >
         </activity>
         <activity
-            android:name="com.codepath.apps.trackabuddy.ShowPopUpResponse"
+            android:name="com.codepath.apps.trackabuddy.ShowTrackReqResp"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Holo.Light.Dialog"
             android:uiOptions="splitActionBarWhenNarrow" >
@@ -91,7 +91,7 @@
         </receiver>
 
         <receiver
-            android:name="com.codepath.apps.trackabuddy.MyCustomReceiver"
+            android:name="com.codepath.apps.trackabuddy.networking.MyCustomReceiver"
             android:exported="false" >
             <intent-filter>
                 <action android:name="TRACK_REQ" />
