--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -106,6 +106,12 @@
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version"/>
+        
+        <service 
+            android:name="com.codepath.apps.trackabuddy.service.TrackaBuddyService" 
+            android:label="@string/app_name" 
+            android:enabled="true"/>
+        
 
     </application>
 
